Alert sticks around after you navigate away from the page
Categories
(Toolkit Graveyard :: Notifications and Alerts, defect)
Tracking
(firefox-esr78 unaffected, firefox84 unaffected, firefox85 unaffected, firefox86 fixed)
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | unaffected |
| firefox86 | --- | fixed |
People
(Reporter: bj, Assigned: sefeng211)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
Steps to reproduce:
- Load the attached file.
- Type "https://www.foxnews.com/" in the URL bar and press enter.
Expected:
2) No more alert.
Actual:
2) The alert is still present on the new page.
| Reporter | ||
Comment 1•5 years ago
|
||
Only happens for me with fission.autostart = true. The alert is not permanent and goes away when the page has finished loading and the focus switches from the location bar to the page content.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2639768bd77f2b1fe89f62a5a286153cd922639c&tochange=778e524a9f31eb873be112dab17b8b272ba56dde
Regressed by Bug 1662265.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
I'll fix it, thanks for the report!
| Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 6•5 years ago
|
||
DelayedDeleteRunnable would schedule itself twice and use input priority
for the second time because it only wants to run after everything
that could possibly touch this tab. This was needed because we were
strict with IPC messages. However, this is no longer needed because
IPC messages with destroyed actors will be discarded nowadays, so
we don't have to use input priority anymore.
Another reason for making this change is that input events could be
suspended when the runnable is about to run, so we need to either
use a different priority or resume input events.
Comment 8•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Updated•2 years ago
|
Description
•