toolkit/components/alerts/test/.eslintrc.js
@@ -1,5 +1,5 @@
 "use strict";
 
 module.exports = {
-  extends: ["plugin:mozilla/mochitest-test"],
+  extends: ["plugin:mozilla/mochitest-test", "plugin:mozilla/browser-test"],
 };
